--- a/Grains/en.lproj/Localizable.strings
+++ b/Grains/en.lproj/Localizable.strings
@@ -66,9 +66,210 @@
 "чашки" = "cups";
 "чашек" = "cups";
 "чашка" = "cup";
-" крупы" = "cereal";
+" крупы" = " of cereal";
 " мл воды" = " ml of water";
 " Oz воды" = " oz of water";
 " воды" = " of water";
 
+
+
+"минута" = "minute";
+"минут" = "minutes";
+"минуты" = "minutes";
+
  
+//MARK: - Grains localization
+
+
+"Булгур" = "Bulgur";
+
+"1. Перед варкой промойте в проточной воде. \n2. Обжарьте булгур на растительном масле 3 минуты. \n3. Добавьте в крупу кипяток в указанной пропорции.\n4. Варите под крышкой не мешая." =
+"1. Rinse in water before cooking.
+\n2. Fry in vegetable oil for 3 minutes.
+\n3. Add boiling water to the cereal in the specified proportion.
+\n4. Cook under the lid without disturbing.
+";
+
+
+"Гречневая крупа" = "Buckwheat";
+
+"1. Засыпьте в холодную, немного подсоленную воду. \n2. Доведите до кипения и варите на тихом огне." = "
+1. Pour in cold, slightly salted water.
+\ n2. Bring to a boil and cook over low heat.
+\n3. Cook under the lid.
+";
+
+"Геркулес" = "Large oatmeal";
+
+"1. Засыпьте в кипящую воду. \n2. Варите на медленном огне, периодически помешивая." = "
+1. Pour into boiling water.
+\n2. Simmer, stirring while stirring.
+
+";
+
+
+"Горох" = "Peas";
+"1. Заранее замочите.
+\n2. Хорошо промойте.
+\n3. Залейте холодной водой и варите на медленном огне, перирдически помешивая. " = "
+
+1. soak for several hours.
+\ n2. Rinse well.
+\ n3. Pour in cold water and simmer, stirring occasionally. "
+;
+
+
+"Долихос" = "Dolichos (hyacinth beans)";
+"1. Замочите на 8-10 часов в большом количестве холодной воды.
+\n2. Промойте.
+\n3. Залейте крутым кипятком.
+\n4. Варите без крышки на слабом огне." = "
+
+1. Soak for 8-10 hours in plenty of cold water.
+\ n2. Rinse.
+\ n3. Pour boiling water.
+\ n4. Cook without a lid over low heat.
+";
+
+
+"Киноа" = "Quinoa";
+
+"1. Тщательно промойте в холодной воде, иначе крупа будет горчить. \n2. Залейте холодной водой. \n3. Варите на медленном огне." = "
+
+1. Rinse thoroughly in cold water, otherwise the cereal will be bitter.
+\n2. Pour in cold water.
+\n3. Simmer.
+";
+
+
+"Кукуруза" = "Corn";
+
+"1. Добавьте крупу в кипящую воду.
+\n2. Варите на медленном огне, периодически помешивая. " = "
+
+1. Pour the grains into boiling water.
+\n2. Simmer, stirring occasionally.
+";
+
+
+"Кускус" = "Couscous";
+
+"1. Залейте кипятком.
+\n2. Накройте крышкой и дайте постоять 5-7 минут.
+\n3. Чтобы сделать крупу рассыпчатой, просто взбейте ее вилкой." =
+
+"
+1. Pour boiling water.
+\n2. Close the lid and let stand for 5-7 minutes.
+\n3. To make the cereal crumbly, just beat it with a fork. ";
+
+
+
+
+"Манная крупа" = "Semolina";
+"1. Засыпьте в кипящую воду или молоко.
+\n2. Постоянно помешивайте.
+\n3. Снимите с плиты и дайте постоять под крышкой 10 минут." = "
+
+1. Pour into boiling water or milk.
+\n2. Stir constantly.
+\n3. Remove from heat and let stand under the lid for 10 minutes.
+";
+
+
+
+"Маш" = "";
+"1. Замочите крупу на 1-3 часа.
+\n2. Промойте в холодной воде.
+\n3. Засыпьте крупу в кипящую воду.
+\n4. Варите на медленном огне." = "
+
+1. Soak the cereal for 1-3 hours.
+\n2. Rinse in cold water.
+\n3. Pour the cereal into boiling water.
+\n4. Simmer.";
+
+
+
+"Нут" = "Chickpeas";
+"1. Замочите на 3-5 часов.
+\n2. Промойте.
+\n3. Залейте холодной водой и варите на медленном огне.
+\n4. За 10 минут до готовности слейте воду, залейте кипятком и снова поставьте на огонь." = "
+
+1. Soak for 3-5 hours.
+\n2. Rinse.
+\n3. Pour in cold water and simmer over low heat.
+\n4. 10 minutes before the end, drain the water, pour boiling water and put it on the fire again.
+";
+
+
+
+"Овсяные хлопья не требующие варки" = "Instant Oatmeal";
+
+"1. Залейте хлопья кипятком или горячим молоком.
+\n2. Тщательно размешайте.
+\n3. Накройте крышкой и дайте настояться." = "
+
+1. Pour the cereal with boiling water or hot milk.
+\n2. Stir well.
+\n3. Let stand under the lid for few minutes.
+";
+
+
+
+"Овсяные хлопья №1" = "Coarse Oat Flakes";
+
+"1. Засыпьте в кипящую воду или молоко.
+\n2. Варите на медленном огне.
+\n3. Снимите с огня, дайте постоять под крышкой 3 минуты." = "
+
+1. Pour the cereal with boiling water or hot milk.
+\n2. Simmer.
+\n3. Remove from heat, let stand under the lid for 3 minutes.
+
+";
+
+
+
+"Овсяные хлопья №2" = "Oatmeal (meduim sized)";
+
+"1. Засыпьте в кипящую воду или молоко.
+\n2. Варите на медленном огне.
+\n3. Снимите с огня, дайте постоять под крышкой 3 минуты." = "
+
+1. Pour the cereal with boiling water or hot milk.
+\n2. Simmer.
+\n3. Remove from heat, let stand under the lid for 3 minutes.
+";
+
+
+
+"Овсяные хлопья №3" = "Oatmeal (small sized)";
+
+"1. Засыпьте в кипящую воду или молоко.
+\n2. Варите на медленном огне.
+\n3. Снимите с огня, дайте постоять под крышкой 3 минуты." = "
+
+1. Pour the cereal with boiling water or hot milk.
+\n2. Simmer.
+\n3. Remove from heat, let stand under the lid for 3 minutes.
+";
+
+
+
+"Перловая крупа" = "Pearl barley";
+
+"1. Если вы предварительно замачивали крупу, то время варки сокращается на 15 минут.
+\n2. Залейте холодной водой.
+\n3. Варите на медленном огне." = "
+
+1. Soaking reduces cooking time by 15 minutes.
+\n2. Pour in cold water.
+\n3. Simmer.";
+
+
+
+
+
+
