--- a/Grains/en.lproj/Main.strings
+++ b/Grains/en.lproj/Main.strings
@@ -51,7 +51,7 @@
 "SRX-wF-Ab7.text" = "CaloriesLabOut";
 
 /* Class = "UILabel"; text = "Добавляйте сюда любимые крупы"; ObjectID = "TlA-Dy-eaM"; */
-"TlA-Dy-eaM.text" = "Add your favorite here";
+"TlA-Dy-eaM.text" = "Add your favorite cereals";
 
 /* Class = "UIButton"; normalTitle = "  Написать разработчику  "; ObjectID = "UKN-zh-TEb"; */
 "UKN-zh-TEb.normalTitle" = "  Write to us  ";
