--- a/Grains/en.lproj/Localizable.strings
+++ b/Grains/en.lproj/Localizable.strings
@@ -95,7 +95,7 @@
 
 "1. Засыпьте в холодную, немного подсоленную воду. \n2. Доведите до кипения и варите на тихом огне." = "
 1. Pour in cold, slightly salted water.
-\ n2. Bring to a boil and cook over low heat.
+\n2. Bring to a boil and cook over low heat.
 \n3. Cook under the lid.
 ";
 
@@ -109,26 +109,21 @@
 
 
 "Горох" = "Peas";
-"1. Заранее замочите.
-\n2. Хорошо промойте.
-\n3. Залейте холодной водой и варите на медленном огне, перирдически помешивая. " = "
+"1. Заранее замочите. \n2. Хорошо промойте.  \n3. Залейте холодной водой и варите на медленном огне, перирдически помешивая. " = "
 
-1. soak for several hours.
-\ n2. Rinse well.
-\ n3. Pour in cold water and simmer, stirring occasionally. "
+1. Soak for several hours.
+\n2. Rinse well.
+\n3. Pour in cold water and simmer, stirring occasionally. "
 ;
 
 
-"Долихос" = "Dolichos (hyacinth beans)";
-"1. Замочите на 8-10 часов в большом количестве холодной воды.
-\n2. Промойте.
-\n3. Залейте крутым кипятком.
-\n4. Варите без крышки на слабом огне." = "
+"Долихос" = "Dolichos";
+"1. Замочите на 8-10 часов в большом количестве холодной воды. \n2. Промойте. \n3. Залейте крутым кипятком. \n4. Варите без крышки на слабом огне." = "
 
 1. Soak for 8-10 hours in plenty of cold water.
-\ n2. Rinse.
-\ n3. Pour boiling water.
-\ n4. Cook without a lid over low heat.
+\n2. Rinse.
+\n3. Pour boiling water.
+\n4. Cook without a lid over low heat.
 ";
 
 
@@ -144,8 +139,7 @@
 
 "Кукуруза" = "Corn";
 
-"1. Добавьте крупу в кипящую воду.
-\n2. Варите на медленном огне, периодически помешивая. " = "
+"1. Добавьте крупу в кипящую воду. \n2. Варите на медленном огне, периодически помешивая. " = "
 
 1. Pour the grains into boiling water.
 \n2. Simmer, stirring occasionally.
@@ -154,9 +148,7 @@
 
 "Кускус" = "Couscous";
 
-"1. Залейте кипятком.
-\n2. Накройте крышкой и дайте постоять 5-7 минут.
-\n3. Чтобы сделать крупу рассыпчатой, просто взбейте ее вилкой." =
+"1. Залейте кипятком. \n2. Накройте крышкой и дайте постоять 5-7 минут. \n3. Чтобы сделать крупу рассыпчатой, просто взбейте ее вилкой." =
 
 "
 1. Pour boiling water.
@@ -167,9 +159,7 @@
 
 
 "Манная крупа" = "Semolina";
-"1. Засыпьте в кипящую воду или молоко.
-\n2. Постоянно помешивайте.
-\n3. Снимите с плиты и дайте постоять под крышкой 10 минут." = "
+"1. Засыпьте в кипящую воду или молоко. \n2. Постоянно помешивайте. \n3. Снимите с плиты и дайте постоять под крышкой 10 минут." = "
 
 1. Pour into boiling water or milk.
 \n2. Stir constantly.
@@ -179,10 +169,7 @@
 
 
 "Маш" = "Mash";
-"1. Замочите крупу на 1-3 часа.
-\n2. Промойте в холодной воде.
-\n3. Засыпьте крупу в кипящую воду.
-\n4. Варите на медленном огне." = "
+"1. Замочите крупу на 1-3 часа. \n2. Промойте в холодной воде.\n3. Засыпьте крупу в кипящую воду.\n4. Варите на медленном огне." = "
 
 1. Soak the cereal for 1-3 hours.
 \n2. Rinse in cold water.
@@ -192,10 +179,7 @@
 
 
 "Нут" = "Chickpeas";
-"1. Замочите на 3-5 часов.
-\n2. Промойте.
-\n3. Залейте холодной водой и варите на медленном огне.
-\n4. За 10 минут до готовности слейте воду, залейте кипятком и снова поставьте на огонь." = "
+"1. Замочите на 3-5 часов.\n2. Промойте.\n3. Залейте холодной водой и варите на медленном огне. \n4. За 10 минут до готовности слейте воду, залейте кипятком и снова поставьте на огонь." = "
 
 1. Soak for 3-5 hours.
 \n2. Rinse.
@@ -207,9 +191,7 @@
 
 "Овсяные хлопья не требующие варки" = "Instant Oatmeal";
 
-"1. Залейте хлопья кипятком или горячим молоком.
-\n2. Тщательно размешайте.
-\n3. Накройте крышкой и дайте настояться." = "
+"1. Залейте хлопья кипятком или горячим молоком. \n2. Тщательно размешайте. \n3. Накройте крышкой и дайте настояться." = "
 
 1. Pour the cereal with boiling water or hot milk.
 \n2. Stir well.
@@ -220,9 +202,7 @@
 
 "Овсяные хлопья №1" = "Coarse Oat Flakes";
 
-"1. Засыпьте в кипящую воду или молоко.
-\n2. Варите на медленном огне.
-\n3. Снимите с огня, дайте постоять под крышкой 3 минуты." = "
+"1. Засыпьте в кипящую воду или молоко. \n2. Варите на медленном огне. \n3. Снимите с огня, дайте постоять под крышкой 3 минуты." = "
 
 1. Pour the cereal with boiling water or hot milk.
 \n2. Simmer.
@@ -234,9 +214,7 @@
 
 "Овсяные хлопья №2" = "Oatmeal (meduim sized)";
 
-"1. Засыпьте в кипящую воду или молоко.
-\n2. Варите на медленном огне.
-\n3. Снимите с огня, дайте постоять под крышкой 3 минуты." = "
+"1. Засыпьте в кипящую воду или молоко.\n2. Варите на медленном огне. \n3. Снимите с огня, дайте постоять под крышкой 3 минуты." = "
 
 1. Pour the cereal with boiling water or hot milk.
 \n2. Simmer.
@@ -260,9 +238,7 @@
 
 "Перловая крупа" = "Pearl barley";
 
-"1. Если вы предварительно замачивали крупу, то время варки сокращается на 15 минут.
-\n2. Залейте холодной водой.
-\n3. Варите на медленном огне." = "
+"1. Если вы предварительно замачивали крупу, то время варки сокращается на 15 минут. \n2. Залейте холодной водой. \n3. Варите на медленном огне." = "
 
 1. Soaking reduces cooking time by 15 minutes.
 \n2. Pour in cold water.
@@ -273,10 +249,7 @@
 
 "Полба" = "Spelt";
 
-"1. Промойте холодной водой.
-\n2.  Замочите на 1 час.
-\n3. Слейте воду.
-\n4. Залейте холодной водой и варите на тихом огне под крышкой." = "
+"1. Промойте холодной водой. \n2.  Замочите на 1 час. \n3. Слейте воду. \n4. Залейте холодной водой и варите на тихом огне под крышкой." = "
 
 1. Rinse with cold water.
 \n2. Soak for 1 hour.
@@ -287,9 +260,7 @@
 
 "Пшено" = "Millet";
 
-"1. Промойте проточной водой 3-5 раз.
-\n2. Залейте холодной водой и варите на медленном огне.
-\n3. Дайте настояться под крышкой 5-10 минут." = "
+"1. Промойте проточной водой 3-5 раз. \n2. Залейте холодной водой и варите на медленном огне. \n3. Дайте настояться под крышкой 5-10 минут." = "
 
 1. Rinse with running water 3-5 times.
 \n2. Pour in cold water and simmer over low heat.
@@ -310,7 +281,11 @@
 
 "Рис Арборио" = "Arborio Rice";
 
-"1. Промойте. \n2. Залейте холодной водой и поставьте на огонь. \n3. Регулярно помешивайте. \n4. Снимите с плиты и дайте настояться под крышкой 10-15 минут." = "";
+"1. Промойте. \n2. Залейте холодной водой и поставьте на огонь. \n3. Регулярно помешивайте. \n4. Снимите с плиты и дайте настояться под крышкой 10-15 минут." = "
+1. Rinse.
+\n2. Pour in cold water and set on fire.
+\n3. Stir regularly.
+\n4. Remove from the stove and leave it under the lid for 10-15 minutes.";
 
 
 
@@ -360,7 +335,11 @@
 \n3. Simmer under the lid.";
 
 
+"Соевые бобы" = "Soya beans
+";
 
+"1. Замочите на 12 часов.\n2. Промойте.\n3. Залейте холодной водой и варите на медленном огне. \n4. За 10 минут до готовности слейте воду, залейте кипятком и снова поставьте на огонь." = "1. Soak for 12 hours. \n2. Rinse. \n3. Pour in cold water and simmer over low heat. \n4. 10 minutes before cooking, drain the water, pour boiling water and put it on the fire again.
+";
 
 
 
