--- a/Grains/en.lproj/Localizable.strings
+++ b/Grains/en.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 "Ваше блюдо готово, приятного аппетита!" = "Your dish is ready, bon appetit!";
 
 "Покупка восстановлена." = "Purchase restored.";
-
+"Успех!" = "Success";
 
 "Время варки любимых круп. \nТаймер. Калорийность.\n Скачай, уверен тебе понравится!" = "Cooking time for your favorite cereals. \nTimer. Calorie content. \nDownload, I'm sure you will like it!";
 
