--- a/Grains/en.lproj/Localizable.strings
+++ b/Grains/en.lproj/Localizable.strings
@@ -95,8 +95,7 @@
 
 "Гречневая крупа" = "Buckwheat";
 
-"1. Засыпьте в холодную, немного подсоленную воду. \n2. Доведите до кипения и варите на тихом огне." = "
-1. Pour in cold, slightly salted water.
+"1. Засыпьте в холодную, немного подсоленную воду. \n2. Доведите до кипения и варите на тихом огне." = "1. Pour in cold, slightly salted water.
 \n2. Bring to a boil and cook over low heat.
 \n3. Cook under the lid.
 ";
