--- a/Grains/en.lproj/Main.strings
+++ b/Grains/en.lproj/Main.strings
@@ -101,5 +101,5 @@
 /* Class = "UIButton"; normalTitle = "Оценить приложение"; ObjectID = "y3H-rQ-GNg"; */
 "y3H-rQ-GNg.normalTitle" = "Rate app";
 
-
+"BBq-lb-JMp" = "Cooking method"
 
