--- a/Grains/ru.lproj/Main.strings
+++ b/Grains/ru.lproj/Main.strings
@@ -26,11 +26,17 @@
 /* Class = "UINavigationItem"; title = "Крупы"; ObjectID = "B4y-P3-0wm"; */
 "B4y-P3-0wm.title" = "Крупы";
 
+/* Class = "UILabel"; text = "Cпособ приготовления:"; ObjectID = "BBq-lb-JMp"; */
+"BBq-lb-JMp.text" = "Cпособ приготовления:";
+
 /* Class = "UILabel"; text = "NameGrain"; ObjectID = "Cef-fb-qri"; */
 "Cef-fb-qri.text" = "NameGrain";
 
 /* Class = "UILabel"; text = "130:00"; ObjectID = "CsV-SR-Z0u"; */
 "CsV-SR-Z0u.text" = "130:00";
+
+/* Class = "UIButton"; normalTitle = "Write to us"; ObjectID = "DXS-Lu-MOQ"; */
+"DXS-Lu-MOQ.normalTitle" = "Написать нам";
 
 /* Class = "UILabel"; text = "120 cal"; ObjectID = "Ha7-B9-Yb1"; */
 "Ha7-B9-Yb1.text" = "120 cal";
@@ -40,6 +46,9 @@
 
 /* Class = "UILabel"; text = "carbLabOut"; ObjectID = "NtY-pz-ubl"; */
 "NtY-pz-ubl.text" = "carbLabOut";
+
+/* Class = "UIButton"; normalTitle = "Востановить покупку"; ObjectID = "RNO-5w-rfA"; */
+"RNO-5w-rfA.normalTitle" = "Востановить покупку";
 
 /* Class = "UITabBarItem"; title = "Еще"; ObjectID = "Rqd-MG-eWY"; */
 "Rqd-MG-eWY.title" = "Еще";
@@ -53,9 +62,6 @@
 /* Class = "UILabel"; text = "Добавляйте сюда любимые крупы"; ObjectID = "TlA-Dy-eaM"; */
 "TlA-Dy-eaM.text" = "Добавляйте сюда любимые крупы";
 
-/* Class = "UIButton"; normalTitle = "  Написать разработчику  "; ObjectID = "UKN-zh-TEb"; */
-"UKN-zh-TEb.normalTitle" = "  Написать разработчику  ";
-
 /* Class = "UILabel"; text = "ProtLabOut"; ObjectID = "Vtc-b7-33I"; */
 "Vtc-b7-33I.text" = "ProtLabOut";
 
@@ -67,9 +73,6 @@
 
 /* Class = "UIButton"; normalTitle = "  "; ObjectID = "aN9-tT-Gko"; */
 "aN9-tT-Gko.normalTitle" = "  ";
-
-/* Class = "UIButton"; normalTitle = "  Восстановить покупку"; ObjectID = "b7h-Uj-xxm"; */
-"b7h-Uj-xxm.normalTitle" = "  Восстановить покупку";
 
 /* Class = "UILabel"; text = "12 min"; ObjectID = "fZ0-xf-Iwn"; */
 "fZ0-xf-Iwn.text" = "12 min";
