неограниченный таймер функция

--- a/Grains/en.lproj/InfoPlist.strings
+++ b/Grains/en.lproj/InfoPlist.strings
@@ -5,4 +5,4 @@
   Created by Алексей Чигарских on 12.04.2020.
   Copyright © 2020 Алексей Чигарских. All rights reserved.
 */
-CFBundleName = "Cereals";
+CFBundleName = "Grains";
