--- a/Grains/en.lproj/Localizable.strings
+++ b/Grains/en.lproj/Localizable.strings
@@ -79,6 +79,10 @@
 
 "Введите название" = "Enter for search";
 
+
+"Купить неограниченный таймер" = "Buy unlimited timers";
+"У вас неограниченный таймер" = "You have unlimited timers";
+
  
 //MARK: - Grains localization
 
