--- a/Grains/en.lproj/Main.strings
+++ b/Grains/en.lproj/Main.strings
@@ -24,7 +24,7 @@
 "Aww-3P-iFx.text" = "12 minutes";
 
 /* Class = "UINavigationItem"; title = "Крупы"; ObjectID = "B4y-P3-0wm"; */
-"B4y-P3-0wm.title" = "Cereals and Grains";
+"B4y-P3-0wm.title" = "Grains";
 
 /* Class = "UILabel"; text = "Cпособ приготовления:"; ObjectID = "BBq-lb-JMp"; */
 "BBq-lb-JMp.text" = "Cooking method:";
