--- a/Grains/en.lproj/Localizable.strings
+++ b/Grains/en.lproj/Localizable.strings
@@ -82,6 +82,7 @@
 
 "Купить неограниченный таймер" = "Buy unlimited timers";
 "У вас неограниченный таймер" = "You have unlimited timers";
+"Безлимитные таймеры уже куплены!" = "Unlimited timers are already purchased!";
 
  
 //MARK: - Grains localization
